# parlament-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.de.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  README.de.md  README.md  SECURITY.de.md  SECURITY.md  claude_desktop_config.json  docker-compose.yml  pyproject.toml  railway.toml  server.json  tool-hashes.json
.github/: dependabot.yml
.github/workflows/: ci.yml  live-test.yml  publish.yml  security.yml
audits/: profile.yaml  tracker.csv
audits/2026-05-30T105608-Z-parlament-mcp/: audit-meta.json  audit-report.md  summary.json  verification-results.json
audits/2026-05-30T105608-Z-parlament-mcp/findings/: ARCH-002-tool-beschreibung-mit-use-case-tags.md  ARCH-003-not-found-anti-pattern.md  ARCH-004-inversion-of-control-transport-agnostisc.md  ARCH-008-drei-mcp-primitive-nutzen.md  ARCH-012-protocolversion-pinning--changelog.md  CH-004-ogd-ch-lizenz-compliance.md  OBS-001-protocol-vs.-execution-errors.md  OBS-003-structured-logging-rfc-5424.md  OBS-006-opentelemetry-tracing.md  OPS-001-test-strategie.md  OPS-003-phasenarchitektur.md  SCALE-001-streamable-http-für-cloud.md  SCALE-002-stateful-load-balancing.md  SCALE-003-mcp-session-id-routing-via-edge-lb.md  SCALE-004-containerization-mit-multi-stage-builds.md  SCALE-006-resource-limits-per-container.md  SDK-001-fastmcp-lifespan-management.md  SDK-002-strukturierte-tool-returns.md  SDK-003-context-injection.md  SDK-004-cors-mcp-session-id-exposure.md  SEC-007-container-sandboxing.md  SEC-009-session-id-cryptographic-binding.md  SEC-014-tool-allow-listing-via-gateway.md  SEC-015-pre-flight-tool-poisoning-detection.md  SEC-016-0.0.0.0-binding-prevention-neighborjack.md  SEC-018-input-validation-an-tool-boundaries.md  SEC-019-lethal-trifecta-vermeiden.md  SEC-021-egress-allow-list.md  SEC-022-tool-hash-pinning--namespace.md
audits/2026-05-30T113503-Z-parlament-mcp/: audit-meta.json  audit-report.md  summary.json  verification-results.json
audits/2026-05-30T113503-Z-parlament-mcp/findings/: SDK-002-strukturierte-tool-returns.md  SEC-009-session-id-cryptographic-binding.md
audits/2026-05-30T115128-Z-parlament-mcp/: audit-meta.json  audit-report.md  summary.json  verification-results.json
deploy/: haproxy.cfg
deploy/k8s/: deployment.yaml  networkpolicy.yaml  service-ingress.yaml
docs/: network-egress.md  roadmap.md  security.md
docs/adr/: ADR-001-server-separation.md  ADR-002-scaling.md  ADR-003-mcp-primitives.md
gateway/: tool-allowlist.example.yaml
openparldata-mcp/: .gitignore  CHANGELOG.md  README.de.md  README.md  pyproject.toml
openparldata-mcp/src/openparldata_mcp/: __init__.py  bodies.py  client.py  config.py  localize.py  logging_setup.py  server.py
openparldata-mcp/tests/: conftest.py  test_bodies.py  test_localize.py  test_server.py
src/parlament_mcp/: __init__.py  auth.py  config.py  gateway.py  logging_setup.py  observability.py  security.py  server.py  tool_hashes.py  transcripts.py
tests/: test_hardening.py  test_server.py  test_transcripts.py
