[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "parlament-mcp"
version     = "0.3.3"
description = "MCP server for the Swiss Parliament (Curia Vista OData API)"
readme      = "README.md"
license     = { file = "LICENSE" }
requires-python = ">=3.11"

keywords = [
    "mcp", "model-context-protocol", "swiss-open-data",
    "swiss-parliament", "curia-vista", "parlament",
    "vorstösse", "abstimmungen",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp[cli]>=1.28.1",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-instrumentation-httpx>=0.42b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]
# OTLP-Export für Distributed Tracing (OBS-006). Ohne diese Extra werden Spans
# erzeugt, aber nicht exportiert (nützlich lokal / in Tests).
otel-export = [
    "opentelemetry-exporter-otlp-proto-http>=1.21.0",
]

[project.scripts]
parlament-mcp = "parlament_mcp.server:main"

[project.urls]
Homepage   = "https://github.com/malkreide/parlament-mcp"
Repository = "https://github.com/malkreide/parlament-mcp"
Issues     = "https://github.com/malkreide/parlament-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/parlament_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "-v --tb=short"
markers      = [
    "live: live API tests (skipped in CI by default)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
