[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "openparldata-mcp"
version     = "0.1.0"
description = "MCP server for Swiss subnational parliaments (cantons & municipalities) via the OpenParlData.ch API"
readme      = "README.md"
license     = { file = "LICENSE" }
requires-python = ">=3.11"
authors     = [{ name = "malkreide" }]

keywords = [
    "mcp", "model-context-protocol", "swiss-open-data",
    "openparldata", "kantonsparlament", "gemeindeparlament",
    "subnational", "parlament", "vorstösse", "abstimmungen",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]

[project.scripts]
openparldata-mcp = "openparldata_mcp.server:main"

[project.urls]
Homepage   = "https://github.com/malkreide/openparldata-mcp"
Repository = "https://github.com/malkreide/openparldata-mcp"
Issues     = "https://github.com/malkreide/openparldata-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/openparldata_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
